@@ -12,15 +12,11 @@ bin_PROGRAMS = hildon-desktop
 
 hildon_desktop_SOURCES = main.c hildon-desktop.h
 
-UNWANTED = -Wl,--export-dynamic -export-dynamic -rdynamic
-hildon_desktop_LDADD = \
-	$(filter-out $(UNWANTED),$(MY_LIBS) $(HD_LIBS) $(HDA_LIBS) $(A11Y_LA))
-hildon_desktop_LDFLAGS = -Wl,--version-script=export.map \
-	$(filter-out $(UNWANTED),$(MAEMO_LAUNCHER_LIBS))
-hildon_desktop_CFLAGS = -std=c99 -fgnu89-inline $(MAEMO_LAUNCHER_CFLAGS)
+hildon_desktop_LDADD = $(MY_LIBS) $(HD_LIBS) $(A11Y_LA)
+hildon_desktop_CFLAGS = -std=c99 -fgnu89-inline
 
 schemadir = ${datadir}/gconf/schemas
-schema_DATA = \
+schema_DATA = \ 
 	hildon-desktop-views.schemas
 
 cuddir = ${sysconfdir}/osso-cud-scripts
